@@ -1,4 +1,5 @@
 v0.6 - Pending
+	+ In fullscreen mode, hide mouse cursor after 2 seconds of no movement
 	+ Bug: Ensure that scrollbars don't show up unless needed
 	+ Bug: Don't resize an image if it's at 100% zoom (David Shakaryan)
 
